--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Courgette&family=Press+Start+2P&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./favicon-32x32.png" />
     <title>Pon Raj Kumar Rajendran</title>
   </head>
   <body>
